# clodius

./: .bumpversion.cfg  .dockerignore  .flake8  .flake8-ignore  .gitignore  .travis.yml  CHANGELOG  CHANGELOG.md  COMMANDS  COMMANDS.md  Dockerfile  MANIFEST  MANIFEST.in  Makefile  README  README.md  README.sh  get_test_data.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test.py  travis_test.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  publish.yml  test.yml
benchmarks/: benchmarks.2016.04.21.txt  benchmarks.2016.04.23.txt  benchmarks.2016.04.24.txt  benchmarks.2016.04.25.txt  juicebox.txt
clodius/: _tsv_to_mrmatrix.py  array.py  bigWig_tiles.py  chromosomes.py  db_tiles.py  describe_dataset.py  fast.c  fast.pyx  fpark.py  hdf_tiles.py  higlass_getter.py  multivec.py  save_tiles.py  tiles.py
clodius/cli/: __init__.py  aggregate.py  convert.py  utils.py
clodius/tiles/: bam.py  bed2ddb.py  bedarcsdb.py  beddb.py  bedfile.py  bigbed.py  bigwig.py  chromsizes.py  cooler.py  density.py  fasta.py  files.py  format.py  geo.py  hitile.py  imtiles.py  mrmatrix.py  multivec.py  nplabels.py  npmatrix.py  npvector.py  points.py  tabix.py  time_interval.py  utils.py
data/: 128k.raw  16k.raw  32k.raw  64k.raw
doc/: README
docs/: conf.py  gene_annotations.rst  higlass_client.rst  higlass_server.rst  index.rst
docs/genomic/: bed.rst  bedgraph.rst  bedpe.rst  bigbed.rst  bigwig.rst  chromosome-sizes.rst  cooler.rst  gene-annotation.rst  hitile.rst  multivec.rst
notebooks/: Aggregating an array.ipynb  BAM files.ipynb  ENSEMBL annotations and RNAseq.ipynb  Parallel hdf5 write.ipynb  Untitled.ipynb  bigwig_readers.ipynb  h37rv gene annotations.ipynb
scripts/: README.make_autocomplete_list  README.make_single_threaded_tiles  README.make_single_threaded_tiles.py  big_spark.py  big_spark_test.py  check_sorted.py  conversion_wrapper.py  cooler_to_tiles.py  create_chrominfo.py  describe_dataset.py  exonU.py  fpark.py  gene_info_by_id.py  get_hitile.py  gff_to_chromsizes.py  gff_to_genepred.py  make_1d_tiles.py  make_autocomplete_list.py  make_big_file.py  make_single_threaded_tiles.py  make_streaming_tiles.py  make_tiles.py  process_file.py  pyprof.sh  replace_importances.py  save_tiles.py  temp.py  test_1d.py  tileBed2DFileByImportance.py  tileBedFileByImportance.py  tile_1d.py  tile_bigWig.py  tile_text_file.py  tsv-to-mrmatrix.py  tsv_to_mrmatrix.py  wordcount.py
test/: bam_test.py  bedfile_test.py  bedpe_test.py  bigwig_test.py  cli.py  cli_test.py  conversion_wrapper_test.py  fpark_test.py  make_tiles_test.py  mrmatrix_test.py  multivec_test.py  nplabels_test.py  test_conversion_wrapper.py  test_make_tiles.py  test_tile_bedfile.py  test_tile_bigwig.py  tile_2d_bedfile_test.py  tile_bedfile_test.py  tile_bigwig_test.py  tsv_to_mrmatrix_test.py  utils.py
test/data/: refGeneColumns.tsv  simpleMatrix.tsv  small.bedGraph  smallBedGraph.tsv  smallRefGene.txt  smallRefGeneCounts.txt
test/sample_data/: 25435_PM15-000877_SM-7QK6O.seg  3_header_100_row_infos.txt  Dixon2012-J1-NcoI-R1-filtered.1000kb.cool  Dixon2012-J1-NcoI-R1-filtered.1000kb.multires.cool  E116-DNase.fc.signal.bigwig.bedGraph.genome.100000  E116-DNase.fc.signal.bigwig.bedGraph.genome.20212  E116-DNase.fc.signal.bigwig.bedGraph.genome.225  GSM2533843_ES_rep1.txt  Rao_RepA_GM12878_Arrowhead.txt  arrowhead_domains_short.txt  arrowhead_domains_short.txt.multires.db  b37_100000.chromSizes  cna.txt  cnv.bed  cnv.hibed  cnvs_hw.tsv  dm3_values.tsv  eigs.hitile  eigs.tsv  exon_unions_mm10.bed  exons.bed  fullMatrix.tsv  galGal6.bed  galGal6.bed.multires.db  galGal6.chrom.sizes  geneAnnotationsExonsUnions.hg19.short.bed  geneAnnotationsExonsUnions.short.bed  geneAnnotationsExonsUnions.short.multires.bed  gene_annotations.short.db  hiccups_loops_short.txt  hiccups_loops_short.txt.multires.db  isidro.bed  isidro.bedpe  overlapping_segments.seg  sample.multival.bed  sample.multival.chrom.sizes  sample2.multival.bed  sample2.multival.chrom.sizes  sample_gwas.bed  sample_gwas.multires.mv5  (+16 more)
test/tiles/: bedarcsdb.py  beddb_test.py  bigbed_test.py  bigwig_test.py  cooler_test.py  (+7 more)
(+4 files in other folders)
