[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clodius"
version = "0.19.0"
description = "Tile generation for big data"
authors = [
    { name = "Peter Kerpedjiev", email = "pkerpedjiev@gmail.com" },
]
dependencies = [
    "numpy<=1.23.0",
    "negspy",
    "pysam",
    "dask",
    "requests",
    "h5py>=3.0.0",
    "pandas>=1.0",
    "slugid",
    "sortedcontainers",
    "cooler>=0.8.5, <0.9.0",
    "pybbi>=0.2.0",
    "Click>=7",
    "pydantic",
    "pyfaidx",
    "tqdm",
]
license = { text = "MIT" }
readme = "README.md"
urls = { homepage = "https://github.com/higlass/clodius" }

[project.scripts]
clodius = "clodius.cli.aggregate:cli"
tsv_to_mrmatrix = "clodius._tsv_to_mrmatrix:main"

[project.optional-dependencies]
dev = [
    "flake8",
    "pytest",
    "pytest-cov",
    "autopep8",
    "bumpversion",
]

[tool.pytest.ini_options]
addopts = "--cov=clodius --tb=native"
testpaths = ["test"]

[tool.hatch.envs.default]
features = ["dev"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "return NotImplemented",
    "raise NotImplementedError",
]
